--- a/Depo/Depo/Presentation/CollectionViewCells/InstaPickHashtagCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/InstaPickHashtagCell.xib
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="InstaPickHashtagCell" customModule="lifebox" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="InstaPickHashtagCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="120" height="49"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -35,13 +34,13 @@
                                     <constraint firstAttribute="width" constant="30" id="nWw-LZ-hp2"/>
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="11" minY="11" maxX="11" maxY="11"/>
-                                <state key="normal" image="grayCloseButton"/>
+                                <state key="normal" image="hashtagCloseButton"/>
                                 <connections>
                                     <action selector="onCloseTap:" destination="gTV-IL-0wX" eventType="touchUpInside" id="ukl-9u-3wS"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="hashtagBackground"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="wjV-eS-y4U" secondAttribute="bottom" id="0UP-SH-sAh"/>
                             <constraint firstItem="jfT-yt-eXX" firstAttribute="centerY" secondItem="Wa2-WH-aXY" secondAttribute="centerY" id="5Ae-ao-pp6"/>
@@ -53,14 +52,14 @@
                     </view>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="Wa2-WH-aXY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="IyN-HJ-jjT"/>
                 <constraint firstAttribute="bottom" secondItem="Wa2-WH-aXY" secondAttribute="bottom" constant="5" id="aw9-wZ-rx0"/>
                 <constraint firstItem="Wa2-WH-aXY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="lPf-Wb-Obg"/>
                 <constraint firstAttribute="trailing" secondItem="Wa2-WH-aXY" secondAttribute="trailing" constant="5" id="ozx-NH-BDr"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="120" height="49"/>
             <connections>
                 <outlet property="hashtagLabel" destination="wjV-eS-y4U" id="q4l-iF-ki0"/>
@@ -70,6 +69,12 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="grayCloseButton" width="17" height="17"/>
+        <image name="hashtagCloseButton" width="17" height="17"/>
+        <namedColor name="hashtagBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
