--- a/Depo/Depo/Presentation/CollectionViewCells/InstapickAnalysisCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/InstapickAnalysisCell.xib
@@ -27,7 +27,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RYD-ut-5UZ" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="47.5" width="355" height="1"/>
-                                <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" name="itemSeperator"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="r9L-bh-fBJ"/>
                                 </constraints>
@@ -147,6 +147,9 @@
     <resources>
         <image name="free_view_background" width="355" height="65"/>
         <image name="purchase_stars_likes" width="127" height="41"/>
+        <namedColor name="itemSeperator">
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
