--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/CampaignCard/CampaignCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/CampaignCard/CampaignCard.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -14,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="CampaignCard" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="CampaignCard" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="657" height="420"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -42,7 +43,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="yuD-Ix-VNf" secondAttribute="bottom" constant="10" id="03y-Wh-lOj"/>
                                 <constraint firstAttribute="trailing" secondItem="IRm-4b-vK6" secondAttribute="trailing" id="NAa-Ct-1cg"/>
@@ -61,14 +62,14 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tsa-hG-kok" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tsa-hG-kok" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="16" y="37.5" width="625" height="278"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Tsa-hG-kok" secondAttribute="height" multiplier="9:4" id="oaA-b4-MVN"/>
                                     </constraints>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBV-40-WML">
-                                    <rect key="frame" x="16" y="38" width="625" height="278"/>
+                                    <rect key="frame" x="16" y="37.5" width="625" height="278"/>
                                     <state key="normal" image="PlayVideoCardIcon"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="exclusiveTap" value="YES"/>
@@ -78,7 +79,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstItem="dkX-6n-aTJ" firstAttribute="top" secondItem="qvW-z1-DFu" secondAttribute="top" constant="7" id="EK2-G5-CJu"/>
                                 <constraint firstItem="Tsa-hG-kok" firstAttribute="leading" secondItem="qvW-z1-DFu" secondAttribute="leading" constant="16" id="NTo-hU-bUJ"/>
@@ -103,7 +104,7 @@
                                         <constraint firstAttribute="height" constant="1" id="qw7-FT-1Us"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqY-lp-Hif">
+                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqY-lp-Hif">
                                     <rect key="frame" x="16" y="1" width="114" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="VWZ-8a-kY4"/>
@@ -113,7 +114,7 @@
                                         <action selector="campaignDetailButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="UG7-7L-D7o"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTj-Pw-sq4">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTj-Pw-sq4">
                                     <rect key="frame" x="481" y="8" width="160" height="30"/>
                                     <state key="normal" title="Analyze with PhotoPick"/>
                                     <connections>
@@ -121,7 +122,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstItem="lTj-Pw-sq4" firstAttribute="centerY" secondItem="uqY-lp-Hif" secondAttribute="centerY" id="8Km-mE-Jug"/>
                                 <constraint firstItem="uqY-lp-Hif" firstAttribute="leading" secondItem="wYr-ei-y6z" secondAttribute="leading" constant="16" id="Bec-Zw-ki7"/>
@@ -137,7 +138,7 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="WBy-NV-x0u" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YPa-PT-Ivw"/>
                 <constraint firstItem="WBy-NV-x0u" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="YgZ-7A-fPg"/>
@@ -157,7 +158,7 @@
             </connections>
             <point key="canvasLocation" x="271.73913043478262" y="-123.88392857142857"/>
         </view>
-        <customObject id="1sK-iv-LjP" customClass="CampaignCardDesigner" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <customObject id="1sK-iv-LjP" customClass="CampaignCardDesigner" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="analyzeDetailButton" destination="lTj-Pw-sq4" id="8uQ-w5-fLU"/>
                 <outlet property="campaignDetailButton" destination="uqY-lp-Hif" id="xVN-UI-cil"/>
@@ -171,5 +172,8 @@
     <resources>
         <image name="CloseCardIcon" width="14" height="14"/>
         <image name="PlayVideoCardIcon" width="30" height="30"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
