--- a/Depo/Depo/Presentation/UserStories/InstaPick/InstaPickCampaign/InstaPickCampaignViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/InstaPick/InstaPickCampaign/InstaPickCampaignViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InstaPickCampaignViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InstaPickCampaignViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="bottomViewDescriptionLabel" destination="tY4-Ke-cKD" id="fpG-Tx-iJm"/>
                 <outlet property="bottomViewImage" destination="gwi-ac-Yu2" id="dr1-hy-Ipo"/>
@@ -35,7 +36,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9q-6G-Q1c">
                                     <rect key="frame" x="13" y="18" width="356" height="201.66666666666666"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camapaignPremiumBackground" translatesAutoresizingMaskIntoConstraints="NO" id="f4I-zY-brU" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camapaignPremiumBackground" translatesAutoresizingMaskIntoConstraints="NO" id="f4I-zY-brU" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="356" height="90"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="CONGRATS ! " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxd-7L-HIE">
@@ -57,7 +58,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dde-4K-Umi">
                                                     <rect key="frame" x="0.0" y="91.333333333333314" width="326" height="50"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgz-pl-dnh" customClass="GradientPremiumButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgz-pl-dnh" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
                                                             <rect key="frame" x="81.666666666666686" y="0.0" width="163" height="50"/>
                                                             <state key="normal" title="title"/>
                                                             <connections>
@@ -88,7 +89,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" systemColor="systemGreenColor"/>
                                     <constraints>
                                         <constraint firstItem="dxd-7L-HIE" firstAttribute="top" secondItem="w9q-6G-Q1c" secondAttribute="top" constant="20" id="50F-UC-e1N"/>
                                         <constraint firstItem="i4K-fp-CsQ" firstAttribute="top" secondItem="dxd-7L-HIE" secondAttribute="bottom" constant="10" id="91q-lz-hCA"/>
@@ -107,7 +108,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D4g-cO-eES">
                                     <rect key="frame" x="13" y="229.66666666666666" width="356" height="314.66666666666674"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gwi-ac-Yu2" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gwi-ac-Yu2" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="10" y="10" width="336" height="149.33333333333334"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="gwi-ac-Yu2" secondAttribute="height" multiplier="18:8" id="bUP-3k-oki"/>
@@ -130,7 +131,7 @@
                                                 </label>
                                             </subviews>
                                         </stackView>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbY-DE-1ed" customClass="RoundedButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbY-DE-1ed" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="37" y="265.66666666666669" width="282" height="44"/>
                                             <state key="normal" title="Button"/>
                                             <connections>
@@ -138,7 +139,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="gwi-ac-Yu2" secondAttribute="trailing" constant="10" id="Fl1-fs-5LH"/>
                                         <constraint firstItem="gwi-ac-Yu2" firstAttribute="top" secondItem="D4g-cO-eES" secondAttribute="top" constant="10" id="PH7-eS-pIb"/>
@@ -149,7 +150,7 @@
                                         <constraint firstItem="vbY-DE-1ed" firstAttribute="top" secondItem="AJs-Mu-dVQ" secondAttribute="bottom" constant="5" id="yP3-eP-6Wo"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1X-wI-m0r" customClass="BlueButtonWithMediumWhiteText" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1X-wI-m0r" customClass="BlueButtonWithMediumWhiteText" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="50" y="554.33333333333337" width="282" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="eNQ-T7-oJG"/>
@@ -160,7 +161,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="D4g-cO-eES" secondAttribute="trailing" constant="13" id="1CW-QT-Syd"/>
                                 <constraint firstItem="AJs-Mu-dVQ" firstAttribute="leading" secondItem="i4K-fp-CsQ" secondAttribute="leading" id="2PX-YP-y0v"/>
@@ -201,7 +202,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="106.79347826086958"/>
         </view>
-        <customObject id="M3K-BN-i3Y" customClass="InstaPickCampaignViewControllerDesigner" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <customObject id="M3K-BN-i3Y" customClass="InstaPickCampaignViewControllerDesigner" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="backgroundView" destination="i5M-Pr-FkT" id="GLO-vD-sjG"/>
                 <outlet property="bottomView" destination="D4g-cO-eES" id="Fev-IP-1eC"/>
@@ -222,5 +223,14 @@
     <resources>
         <image name="CloseCardIcon" width="14" height="14"/>
         <image name="camapaignPremiumBackground" width="317" height="90"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
