--- a/Depo/Depo/Presentation/UserStories/Others/TextEnter/TextEnterController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/TextEnter/TextEnterController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextEnterController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextEnterController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="changeButton" destination="WZa-Y7-yKk" id="bMg-7u-Kd0"/>
                 <outlet property="phoneEnterView" destination="w6N-rX-U5n" id="dJL-8L-JNU"/>
@@ -33,16 +32,16 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oft-D5-eBu">
                     <rect key="frame" x="20" y="60.5" width="335" height="60"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6N-rX-U5n" customClass="ProfilePhoneEnterView" customModule="lifebox" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6N-rX-U5n" customClass="ProfilePhoneEnterView" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="kkk-dh-JZm"/>
                             </constraints>
                         </view>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZa-Y7-yKk" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZa-Y7-yKk" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="75" y="150.5" width="225" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="yjQ-5Y-4Ms"/>
@@ -53,9 +52,9 @@
                     </connections>
                 </button>
                 <view userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bpc-2K-Ib5">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <viewLayoutGuide key="safeArea" id="naT-Ed-uEL"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iSi-KE-raL">
                     <rect key="frame" x="0.0" y="667" width="375" height="261"/>
@@ -75,7 +74,8 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <viewLayoutGuide key="safeArea" id="AX3-H7-wCy"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="WZa-Y7-yKk" firstAttribute="top" secondItem="oft-D5-eBu" secondAttribute="bottom" constant="30" id="26L-ck-JTV"/>
                 <constraint firstItem="AX3-H7-wCy" firstAttribute="bottom" secondItem="iSi-KE-raL" secondAttribute="bottom" constant="-261" id="F58-28-veO"/>
@@ -94,8 +94,12 @@
                 <constraint firstItem="Bpc-2K-Ib5" firstAttribute="trailing" secondItem="AX3-H7-wCy" secondAttribute="trailing" id="sLG-zH-ZrF"/>
                 <constraint firstItem="AX3-H7-wCy" firstAttribute="trailing" secondItem="oft-D5-eBu" secondAttribute="trailing" constant="20" id="yTY-Ws-Qhg"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="AX3-H7-wCy"/>
             <point key="canvasLocation" x="24.800000000000001" y="50.824587706146929"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
